--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
     "start:prod": "node index.js"
   },
   "keywords": [
     "unbeatable"
   ],
-  "devDependencies": {
+  "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0",
+    "compromise": "^14.14.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^3.3.7",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -29,14 +35,5 @@
     "tiny-csrf": "^1.1.4"
   },
   "author": "sathwik <ssathwik31831@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.7",
-    "compromise": "^14.14.0",
-    "i": "^0.3.7",
-    "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.7",
-    "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
-  }
+  "license": "ISC"
 }
